--- a/frontend/about.html
+++ b/frontend/about.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="images/logo.svg" alt="PawCare Logo">
+                <img src="images/logo.png" alt="PawCare Logo">
                 PawCare
             </div>
             <ul>
@@ -26,4 +26,30 @@
     <main class="content">
         <div class="card fade-in">
             <h2>About PawCare</h2>
-            <p>PawCare Veterinary Clinic has
+            <p>PawCare Veterinary Clinic has been providing compassionate veterinary care for your beloved pets since 2010. Our experienced veterinary team is dedicated to ensuring the health and well-being of your pets through comprehensive health examinations, vaccinations, emergency care, and more.</p>
+            <p>At PawCare, we understand the special bond between pets and their owners, and we strive to offer the highest quality medical care in a warm and welcoming environment. Our clinic is equipped with modern medical equipment, and we offer a range of services to meet the diverse needs of our clients.</p>
+        </div>
+
+        <div class="card fade-in">
+            <h2>Our Mission</h2>
+            <p>Our mission is to provide exceptional veterinary care to our patients and outstanding service to our clients. We believe in treating every pet as if they were our own and every client as a member of our family. We are committed to continuous learning and staying updated with the latest advancements in veterinary medicine to ensure the best possible care for your pets.</p>
+        </div>
+
+        <div class="card fade-in">
+            <h2>Meet Our Team</h2>
+            <p>Our team consists of highly skilled and compassionate veterinarians, veterinary technicians, and support staff who work together to provide the best care for your pets. We take pride in our collaborative approach and our dedication to the well-being of your pets.</p>
+            <ul class="team-list">
+                <li>Dr. Jane Smith, DVM - Chief Veterinarian</li>
+                <li>Dr. John Doe, DVM - Associate Veterinarian</li>
+                <li>Emily Johnson - Veterinary Technician</li>
+                <li>Michael Brown - Veterinary Technician</li>
+                <li>Sarah White - Receptionist</li>
+            </ul>
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 PawCare Veterinary Clinic. All rights reserved.</p>
+    </footer>
+</body>
+</html>
