--- a/frontend/appointment.html
+++ b/frontend/appointment.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="images/logo.svg" alt="PawCare Logo">
+                <img src="images/logo.png" alt="PawCare Logo">
                 PawCare
             </div>
             <ul>
