--- a/frontend/appointment.html
+++ b/frontend/appointment.html
@@ -26,7 +26,7 @@
     <main class="content">
         <div class="card fade-in">
             <h2>Book an Appointment</h2>
-            <form id="appointmentForm" class="appointment-form">
+            <form id="appointmentForm" class="appointment-form" action="submit_appointment.php" method="post">
                 <div class="form-group">
                     <label for="petOwner">Pet Owner's Name</label>
                     <input type="text" id="petOwner" name="petOwner" required>
@@ -80,9 +80,6 @@
 
     <footer>
         <p>&copy; 2025 PawCare Veterinary Clinic. All rights reserved.</p>
-        <p>Current Time: <span id="current-time">2025-02-28 05:57:00 UTC</span></p>
     </footer>
-
-    <script src="js/app.js"></script>
 </body>
 </html>
