--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="logo">
                 <img src="images/logo.png" alt="PawCare Logo">
-                PawCare
+                Pawssible Solutions Veterinary
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -22,8 +22,11 @@
             </ul>
         </nav>
     </header>
+    <iframe src="http://localhost/PawssibleVet/ai/index.php"  style="border: none; width: 450px; height: 800px; position: fixed; bottom: 20px; right: 1px; z-index: 1000;"></iframe>
 
     <main class="content">
+        <br>
+        <br>
         <div class="card fade-in">
             <h2>About PawCare</h2>
             <p>PawCare Veterinary Clinic has been providing compassionate veterinary care for your beloved pets since 2010. Our experienced veterinary team is dedicated to ensuring the health and well-being of your pets through comprehensive health examinations, vaccinations, emergency care, and more.</p>
@@ -39,11 +42,10 @@
             <h2>Meet Our Team</h2>
             <p>Our team consists of highly skilled and compassionate veterinarians, veterinary technicians, and support staff who work together to provide the best care for your pets. We take pride in our collaborative approach and our dedication to the well-being of your pets.</p>
             <ul class="team-list">
-                <li>Dr. Jane Smith, DVM - Chief Veterinarian</li>
-                <li>Dr. John Doe, DVM - Associate Veterinarian</li>
-                <li>Emily Johnson - Veterinary Technician</li>
-                <li>Michael Brown - Veterinary Technician</li>
-                <li>Sarah White - Receptionist</li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
             </ul>
         </div>
     </main>
