--- a/appointment.html
+++ b/appointment.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="logo">
                 <img src="images/logo.png" alt="PawCare Logo">
-                PawCare
+                Pawssible Solutions Veterinary
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -24,6 +24,8 @@
     </header>
 
     <main class="content">
+        <br>
+        <br>
         <div class="card fade-in">
             <h2>Book an Appointment</h2>
             <form id="appointmentForm" class="appointment-form">
