--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PawCare Veterinary Clinic</title>
+    <title>PSV Clinic</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <iframe src="http://localhost/PawssibleVet/ai/index.php"  style="border: none; width: 450px; height: 800px; position: fixed; bottom: 20px; right: 1px; z-index: 1000;"></iframe>
     <header>
         <nav>
             <div class="logo">
                 <img src="images/logo.png" alt="PawCare Logo">
-                PawCare
+                Pawssible Solutions Veterinary 
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -33,16 +34,16 @@
             <h2>Our Services</h2>
             <div class="services-grid">
                 <div class="service-item">
-                    <h3>Regular Checkups</h3>
-                    <p>Comprehensive health examinations for your pets</p>
-                </div>
-                <div class="service-item">
                     <h3>Vaccinations</h3>
-                    <p>Keep your pets protected against common diseases</p>
+                    <p>We provide vaccinations to protect your pets from various diseases and keep them up to date with their immunizations     </p>
                 </div>
                 <div class="service-item">
-                    <h3>Emergency Care</h3>
-                    <p>24/7 emergency veterinary services</p>
+                    <h3>Deworming</h3>
+                    <p>Our Deworming services help remove internal parasites from your pets, ensuring their overall health and well-being</p>
+                </div>
+                <div class="service-item">
+                    <h3>Consulation</h3>
+                    <p>Our Experienced veterinary are available for the consultations to disscuss any health concerns or issues you may have your with your pets</p>
                 </div>
             </div>
         </div>
