--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="logo">
                 <img src="images/logo.png" alt="PawCare Logo">
-                PawCare
+                Pawssible Solutions Veterinary
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -49,8 +49,8 @@
 
                 <div class="service-item">
                     <img src="images/dental.svg" alt="Dental Care">
-                    <h3>Dental Care</h3>
-                    <p>Professional dental cleaning and oral health maintenance</p>
+                    <h3>Deworming</h3>
+                    <p>Remove internal parasites from your pets, ensuring their overall health and well-being</p>
                     <a href="appointment.html" class="btn-secondary">Book Service</a>
                 </div>
             </div>
@@ -63,65 +63,27 @@
                 <div class="service-item">
                     <img src="images/surgery.svg" alt="Surgery">
                     <h3>Surgery</h3>
-                    <p>Modern surgical facilities for both routine and complex procedures</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit est, consequuntur culpa laboriosam voluptates quibusdam nostrum accusamus! Natus beatae sapiente commodi maiores libero eaque, laudantium perspiciatis quod obcaecati fuga omnis.</p>
                     <a href="appointment.html" class="btn-secondary">Consult Now</a>
                 </div>
 
                 <div class="service-item">
                     <img src="images/xray.svg" alt="Diagnostics">
                     <h3>Diagnostics</h3>
-                    <p>Advanced diagnostic services including X-rays and lab tests</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, dolorum aliquid corporis dolore accusantium ullam esse assumenda natus ab modi error sapiente, delectus quia excepturi itaque? Fugiat quos officia impedit.</p>
                     <a href="appointment.html" class="btn-secondary">Learn More</a>
                 </div>
 
                 <div class="service-item">
                     <img src="images/emergency.svg" alt="Emergency Care">
                     <h3>Emergency Care</h3>
-                    <p>24/7 emergency veterinary services for urgent situations</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ad illo quibusdam quo, cupiditate ipsa quos? Hic reiciendis inventore fugiat itaque harum temporibus officiis. Aperiam facilis quibusdam numquam veniam. Cum.</p>
                     <a href="tel:+1234567890" class="btn-emergency">Emergency: Call Now</a>
                 </div>
             </div>
         </div>
 
         <!-- Wellness Plans -->
-        <div class="card fade-in">
-            <h2>Wellness Plans</h2>
-            <div class="plans-grid">
-                <div class="plan-item">
-                    <h3>Basic Wellness</h3>
-                    <ul>
-                        <li>Annual health examination</li>
-                        <li>Core vaccinations</li>
-                        <li>Parasite prevention</li>
-                        <li>Basic health screening</li>
-                    </ul>
-                    <a href="appointment.html" class="btn-primary">Select Plan</a>
-                </div>
-
-                <div class="plan-item featured">
-                    <h3>Complete Care</h3>
-                    <ul>
-                        <li>Bi-annual health examinations</li>
-                        <li>All vaccinations</li>
-                        <li>Dental cleaning</li>
-                        <li>Comprehensive lab work</li>
-                        <li>Unlimited office visits</li>
-                    </ul>
-                    <a href="appointment.html" class="btn-primary">Select Plan</a>
-                </div>
-
-                <div class="plan-item">
-                    <h3>Senior Care</h3>
-                    <ul>
-                        <li>Quarterly health examinations</li>
-                        <li>Senior-specific vaccinations</li>
-                        <li>Arthritis management</li>
-                        <li>Advanced health monitoring</li>
-                    </ul>
-                    <a href="appointment.html" class="btn-primary">Select Plan</a>
-                </div>
-            </div>
-        </div>
 
         <!-- Contact Section -->
         <div class="card contact-section fade-in">
@@ -133,11 +95,11 @@
                     Call Us
                 </a>
                 <a href="mailto:info@pawcare.com" class="btn-contact">
-                    <img src="images/email.svg" alt="Email">
+                    <img src="images/email.sv" alt="Email">
                     Email Us
                 </a>
-                <a href="contact.html" class="btn-contact">
-                    <img src="images/message.svg" alt="Message">
+                <a href="index.html" class="btn-contact">
+                    <img src="images/message.sv" alt="Message">
                     Send Message
                 </a>
             </div>
