--- a/about.html
+++ b/about.html
@@ -22,14 +22,13 @@
             </ul>
         </nav>
     </header>
-    <iframe src="http://localhost/PawssibleVet/ai/index.php"  style="border: none; width: 450px; height: 800px; position: fixed; bottom: 20px; right: 1px; z-index: 1000;"></iframe>
 
     <main class="content">
         <br>
         <br>
         <div class="card fade-in">
-            <h2>About PawCare</h2>
-            <p>PawCare Veterinary Clinic has been providing compassionate veterinary care for your beloved pets since 2010. Our experienced veterinary team is dedicated to ensuring the health and well-being of your pets through comprehensive health examinations, vaccinations, emergency care, and more.</p>
+            <h2>About Pawssible Solutions Veterinary</h2>
+            <p>has been providing compassionate veterinary care for your beloved pets since 2010. Our experienced veterinary team is dedicated to ensuring the health and well-being of your pets through comprehensive health examinations, vaccinations, emergency care, and more.</p>
             <p>At PawCare, we understand the special bond between pets and their owners, and we strive to offer the highest quality medical care in a warm and welcoming environment. Our clinic is equipped with modern medical equipment, and we offer a range of services to meet the diverse needs of our clients.</p>
         </div>
 
@@ -51,7 +50,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 PawCare Veterinary Clinic. All rights reserved.</p>
+        <p>&copy; 2025 Pawssible Solutions Veterinary. All rights reserved.</p>
     </footer>
 </body>
 </html>
