--- a/appointment.html
+++ b/appointment.html
@@ -81,7 +81,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 PawCare Veterinary Clinic. All rights reserved.</p>
+        <p>&copy; 2025 Pawssible Solutions Veterinary. All rights reserved.</p>
         <p>Current Time: <span id="current-time">2025-03-01 16:29:59 UTC</span></p>
     </footer>
 
