--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Veterinary Clinic. All rights reserved.</p>
+        <p>&copy; 2025 Pawssible Solutions Veterinary. All rights reserved.</p>
     </footer>
 </body>
 </html>
