--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </header>
 
     <section class="hero">
-        <h1>Welcome to PawCare</h1>
+        <h1>Welcome to Pawssible Solutions  
+            <br> Veterinary</h1>
         <p>Providing compassionate veterinary care for your beloved pets</p>
     </section>
 
@@ -78,7 +79,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 PawCare Veterinary Clinic. All rights reserved.</p>
+        <p>&copy; 2025 Pawssible Solutions Veterinary. All rights reserved.</p>
         <p>Current Time: <span id="current-time">2025-02-28 05:57:00 UTC</span></p>
     </footer>
 
