--- a/services.html
+++ b/services.html
@@ -107,7 +107,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 PawCare Veterinary Clinic. All rights reserved.</p>
+        <p>&copy; 2025 Pawssible Solutions Veterinary. All rights reserved.</p>
         <p>Current Time: <span id="current-time">2025-02-28 06:01:09 UTC</span></p>
     </footer>
 
